# tax_engine

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: calculator_benchmarks.rs
examples/: basic_calculation.rs  multi_jurisdiction.rs
src/: lib.rs  main.rs
src/calculators/: income_tax.rs  mod.rs
src/data/: mod.rs
src/data/cache/: memory.rs  mod.rs
src/data/scrapers/: mod.rs  us_federal.rs
src/errors/: mod.rs  tax_error.rs
src/models/: bracket.rs  entity.rs  jurisdiction.rs  mod.rs
src/utils/: currency.rs  mod.rs
tests/: integration_tests.rs  mod.rs
tests/scrapers/: mod.rs  us_federal_tests.rs
