[package]
name = "tax_engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust tax calculation engine with automated rate fetching"
license = "MIT"
repository = "https://github.com/yourusername/tax_engine"
keywords = ["tax", "finance", "calculator", "irs"]
categories = ["finance", "web-programming"]

[lib]
name = "tax_engine"
path = "src/lib.rs"

[[bin]]
name = "tax_engine_bin"
path = "src/main.rs"

[[example]]
name = "basic_calculation"
path = "examples/basic_calculation.rs"

[[example]]
name = "multi_jurisdiction"
path = "examples/multi_jurisdiction.rs"

[dependencies]
rust_decimal = "1.32"
rust_decimal_macros = "1.32"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
cached = "0.44"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockito = "1.2"
regex = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"